plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'jacoco'
}

group = 'com.ballotbuddy'
version = '1.0.0'
sourceCompatibility = '11'

// Disable the plain JAR (we only want the Spring Boot executable JAR)
jar {
    enabled = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.h2database:h2'
    
    // Google Cloud Ecosystem (The "Gold Standard" Integration)
    implementation platform('com.google.cloud:libraries-bom:26.32.0')
    implementation 'com.google.cloud:spring-cloud-gcp-starter-storage:3.4.0'
    implementation 'com.google.cloud:spring-cloud-gcp-starter-logging:3.4.0'
    implementation 'com.google.cloud:google-cloud-storage'
    implementation 'com.google.cloud:google-cloud-logging'
    implementation 'com.google.cloud:google-cloud-logging-logback:0.130.22-alpha'
    implementation 'com.google.cloud:google-cloud-vertexai:1.3.0'
    implementation 'com.google.cloud:google-cloud-secretmanager:2.18.0'
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'io.micrometer:micrometer-registry-stackdriver'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
    testImplementation 'org.mockito:mockito-inline:4.5.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    // Exclude classes with no business logic from coverage reports
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it)
        }))
    }
}
